--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "fcc-learn-npm-package-json",
 	"author": "KingGoku90",
+	"description": "A web app that will contribute to meaningfull web and software applications",
 	"dependencies": {
 		"express": "^4.18.2"
 	},
