--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "fcc-learn-npm-package-json",
 	"author": "KingGoku90",
 	"description": "A web app that will contribute to meaningfull web and software applications",
+	"keywords": ["freecodecamp", "KingGoku90", "Learn to be a programmer", "Learn to be a web deveoper"],
 	"dependencies": {
 		"express": "^4.18.2"
 	},
