--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
 	"name": "fcc-learn-npm-package-json",
 	"author": "KingGoku90",
 	"description": "A web app that will contribute to meaningfull web and software applications",
-	"keywords": ["freecodecamp", "KingGoku90", "Learn to be a programmer", "Learn to be a web deveoper"],
+	"keywords": [ "freecodecamp", "KingGoku90", "Learn to be a programmer", "Learn to be a web deveoper" ],
+	"license": "MIT",
 	"dependencies": {
 		"express": "^4.18.2"
 	},
