--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"license": "MIT",
 	"version": "1.0.0",
 	"dependencies": {
-		"express": "^4.18.2"
+		"express": "^4.18.2",
+		"moment": "2.14.0"
 	},
 	"main": "server.js",
 	"scripts": {
