--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 	"version": "1.0.0",
 	"dependencies": {
 		"express": "^4.18.2",
-		"moment": "2.10.2"
+		"moment": "~2.10.2"
 	},
 	"main": "server.js",
 	"scripts": {
