--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
 	"license": "MIT",
 	"version": "1.0.0",
 	"dependencies": {
-		"express": "^4.18.2",
-		"moment": "^2.29.4"
+		"express": "^4.18.2"
 	},
 	"main": "server.js",
 	"scripts": {
