--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
 	"license": "MIT",
 	"version": "1.0.0",
 	"dependencies": {
-		"express": "^4.18.2"
+		"body-parser": "^1.15.2",
+		"cookie-parser": "^1.4.6",
+		"dotenv": "^16.0.3",
+		"express": "^4.18.2",
+		"fcc-express-bground": "github:freeCodeCamp/fcc-express-bground-pkg"
 	},
 	"main": "server.js",
 	"scripts": {
@@ -19,9 +23,5 @@
 	},
 	"engines": {
 		"node": "18.12.1"
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://idontknow/todo.git"
 	}
 }
